# nrf_grtc_wakeup

./: CMakeLists.txt  nrf54l15dk_nrf54l15_cpuapp.overlay  prj.conf
modules/scd4x/: CMakeLists.txt  Kconfig
modules/scd4x/src/: scd4x.c  scd4x_lib.h
src/: coap_client.c  coap_client_utils.c  coap_client_utils.h  main.c  sensor.c  sensor.h  storage_nvs.c  storage_nvs.h
